rewriting indexedDB in index.html for simplicity

--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -55,7 +55,19 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="/index.js"></script>
-    <script src="/db.js"></script>
+    <script>
+      const request = indexedDb.open('budget', 1);
+
+      request.onsuccess = (event) => {
+        console.log(request.result);
+      };
+
+      request.onupgradeneeded = ({ target }) => {
+        console.log('onupgradeneeded executed');
+        const db = target.result;
+        const objectStore = db.createObjectStore('budget');
+      };
+    </script>
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker
