--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -55,31 +55,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="/index.js"></script>
-    <script>
-      const request = indexedDb.open('budget', 1);
-
-      request.onsuccess = (event) => {
-        console.log(request.result);
-      };
-
-      request.onupgradeneeded = ({ target }) => {
-        console.log('onupgradeneeded executed');
-        const db = target.result;
-        const objectStore = db.createObjectStore('budget');
-      };
-    </script>
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker
-          .register('service-worker.js')
-          .then((registration) => {
-            console.log('Service Worker Registered!');
-          })
-          .catch((error) => {
-            console.log('Service Worker Registration Failed!');
-            console.log(error);
-          });
-      }
-    </script>
   </body>
 </html>
+<script>
+  const request = indexedDB.open('firstDatabase', 1);
+  console.log(request);
+
+  request.onerror = (err) => {
+    console.log(err);
+  };
+  request.onsuccess = (event) => {
+    console.log(request.result);
+  };
+</script>
