--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -54,17 +54,24 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="/db.js"></script>
     <script src="/index.js"></script>
+    <!-- <script>
+      const request = indexedDB.open('budget', 1);
+      console.log(request);
+
+      request.onupgradeneeded = ({ target }) => {
+        console.log('onupgradeneeded => executed');
+        const db = target.result;
+        const objectStore = db.createObjectStore('budget');
+      };
+
+      request.onerror = (err) => {
+        console.log(err);
+      };
+      request.onsuccess = (event) => {
+        console.log(request.result);
+      };
+    </script> -->
   </body>
 </html>
-<script>
-  const request = indexedDB.open('firstDatabase', 1);
-  console.log(request);
-
-  request.onerror = (err) => {
-    console.log(err);
-  };
-  request.onsuccess = (event) => {
-    console.log(request.result);
-  };
-</script>
