--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -56,22 +56,17 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="/db.js"></script>
     <script src="/index.js"></script>
-    <!-- <script>
-      const request = indexedDB.open('budget', 1);
-      console.log(request);
-
-      request.onupgradeneeded = ({ target }) => {
-        console.log('onupgradeneeded => executed');
-        const db = target.result;
-        const objectStore = db.createObjectStore('budget');
-      };
-
-      request.onerror = (err) => {
-        console.log(err);
-      };
-      request.onsuccess = (event) => {
-        console.log(request.result);
-      };
-    </script> -->
+    <script>
+      (function () {
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker
+            .register('./service-worker.js', { scope: '/' })
+            .then(() => console.log('Service Worker registered successfully.'))
+            .catch((error) =>
+              console.log('Service Worker registration failed:', error)
+            );
+        }
+      })();
+    </script>
   </body>
 </html>
